fixed: mrged cart and order service, added tests, services