@@ -4,26 +4,30 @@ import java.time.LocalDateTime;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.web.reactive.function.client.WebClient;
 
 import com.buyapp.common.dto.CartDto;
+import com.buyapp.common.dto.CartDto.CartItemDto;
 import com.buyapp.common.dto.OrderDto;
 import com.buyapp.common.dto.OrderDto.OrderItemDto;
 import com.buyapp.common.dto.ProductDto;
 import com.buyapp.common.dto.ShippingAddressDto;
 import com.buyapp.common.exception.ResourceNotFoundException;
+import com.buyapp.orderservice.model.Cart;
+import com.buyapp.orderservice.model.CartItem;
 import com.buyapp.orderservice.model.Order;
 import com.buyapp.orderservice.model.OrderItem;
 import com.buyapp.orderservice.model.OrderStatus;
+import com.buyapp.orderservice.repository.CartRepository;
 import com.buyapp.orderservice.repository.OrderRepository;
 
 @Service
 public class OrderService {
 
     private final OrderRepository orderRepository;
+    private final CartRepository cartRepository;
     private final WebClient.Builder webClientBuilder;
 
     /**
@@ -31,47 +35,117 @@ public class OrderService {
      * These match the spring.application.name from each service's application.yml.
      * @LoadBalanced WebClient resolves these through Eureka to find the actual service instances.
      */
-    private static final String CART_SERVICE_URL = "http://cart-service";
     private static final String PRODUCT_SERVICE_URL = "http://product-service";
     private static final String USER_SERVICE_URL = "http://user-service";
     private static final String ORDER_NOT_FOUND_MESSAGE = "Order not found with id: ";
+    private static final String CART_NOT_FOUND_MESSAGE = "Cart not found for user: ";
 
-    public OrderService(OrderRepository orderRepository, WebClient.Builder webClientBuilder) {
+    public OrderService(OrderRepository orderRepository, CartRepository cartRepository, WebClient.Builder webClientBuilder) {
         this.orderRepository = orderRepository;
+        this.cartRepository = cartRepository;
         this.webClientBuilder = webClientBuilder;
     }
 
-    /**
-     * Create order from cart
-     * Reduces stock for each product and clears the cart
-     */
+    // Cart
+
+    //Get user's cart or create a new one if it doesn't exist
+    public CartDto getCart(String userId) {
+        Cart cart = getOrCreateCart(userId);
+        return toCartDto(cart, true); // Validate availability when fetching cart
+    }
+
+    //Add item to cart or update quantity if item already exists
+
+    public CartDto addItem(String userId, CartItemDto itemDto) {
+        // Validate product exists and stock availability
+        ProductDto product = getProductByIdOrThrow(itemDto.getProductId());
+
+        // Get or create cart
+        Cart cart = getOrCreateCart(userId);
+
+        // Check if item already exists to validate total quantity
+        CartItem existingItem = cart.findItemByProductId(itemDto.getProductId());
+        if (existingItem != null) {
+            // Validate total quantity doesn't exceed stock
+            int newQuantity = existingItem.getQuantity() + itemDto.getQuantity();
+            validateStockAvailability(product, newQuantity);
+        } else {
+            // Validate initial quantity
+            validateStockAvailability(product, itemDto.getQuantity());
+        }
+
+        // Use Cart's method to add or update item
+        CartItem newItem = new CartItem(
+                itemDto.getProductId(),
+                product.getName(),
+                itemDto.getQuantity(),
+                product.getPrice());
+        cart.addOrUpdateItem(newItem); // Handles both add and update, updates updatedAt
+
+        Cart savedCart = cartRepository.save(cart);
+
+        return toCartDto(savedCart, false); // No need to validate again, we just validated
+    }
+
+    //Update item quantity in cart
+    public CartDto updateItemQuantity(String userId, String productId, Integer quantity) {
+        if (quantity < 1) {
+            throw new IllegalArgumentException("Quantity must be at least 1");
+        }
+
+        Cart cart = cartRepository.findByUserId(userId)
+                .orElseThrow(() -> new ResourceNotFoundException(CART_NOT_FOUND_MESSAGE + userId));
+
+        CartItem item = cart.findItemByProductId(productId);
+        if (item == null) {
+            throw new ResourceNotFoundException("Item not found in cart: " + productId);
+        }
+
+        ProductDto product = getProductByIdOrThrow(productId);
+        validateStockAvailability(product, quantity);
+
+        cart.updateItem(productId, quantity, product.getPrice());
+        Cart savedCart = cartRepository.save(cart);
+        return toCartDto(savedCart, false);
+    }
+
+    public CartDto removeItem(String userId, String productId) {
+        Cart cart = cartRepository.findByUserId(userId)
+                .orElseThrow(() -> new ResourceNotFoundException(CART_NOT_FOUND_MESSAGE + userId));
+
+        cart.removeItem(productId); // removeItem already updates updatedAt
+        Cart savedCart = cartRepository.save(cart);
+        return toCartDto(savedCart, false);
+    }
+
+    public void clearCart(String userId) {
+        Cart cart = cartRepository.findByUserId(userId)
+                .orElseThrow(() -> new ResourceNotFoundException(CART_NOT_FOUND_MESSAGE + userId));
+
+        cart.clear(); // Uses Cart's clear() method which updates updatedAt
+        cartRepository.save(cart);
+    }
+
+    //Order
+
+    //Create order from cart
     public OrderDto createOrder(String userId, ShippingAddressDto shippingAddressDto) {
-        // Get cart from Cart Service
-        CartDto cart = getCart(userId);
-        
-        if (cart.getItems() == null || cart.getItems().isEmpty()) {
+        // Get cart from local repository
+        Cart cart = cartRepository.findByUserId(userId)
+                .orElseThrow(() -> new ResourceNotFoundException(CART_NOT_FOUND_MESSAGE + userId));
+
+        if (cart.isEmpty()) {
             throw new IllegalArgumentException("Cannot create order from empty cart");
         }
 
-        // Cache products and seller IDs to avoid redundant calls
-        Map<String, ProductDto> productCache = new HashMap<>();
+        // Cache seller IDs to avoid redundant calls
         Map<String, String> sellerIdCache = new HashMap<>();
 
-        // Validate all items are available and cache products
-        for (CartDto.CartItemDto item : cart.getItems()) {
-            ProductDto product = getProductById(item.getProductId());
-            if (product == null) {
-                throw new ResourceNotFoundException("Product not found: " + item.getProductId());
-            }
-            productCache.put(item.getProductId(), product);
-            
-            if (product.getStock() == null || product.getStock() < item.getQuantity()) {
-                throw new IllegalArgumentException(
-                        "Insufficient stock for product: " + product.getName() +
-                                ". Available: " + (product.getStock() != null ? product.getStock() : 0) +
-                                ", Requested: " + item.getQuantity());
-            }
-            
+        // Validate all items are available and cache seller IDs
+        for (CartItem item : cart.getItems()) {
+            ProductDto product = getProductByIdOrThrow(item.getProductId());
+            validateStockAvailability(product, item.getQuantity());
+
             // Cache seller ID
             String sellerId = getProductSellerId(item.getProductId());
             if (sellerId == null) {
@@ -80,82 +154,59 @@ public class OrderService {
             sellerIdCache.put(item.getProductId(), sellerId);
         }
 
-        // Convert cart items to order items (using cached data)
-        List<OrderItem> orderItems = cart.getItems().stream()
-                .map(cartItem -> new OrderItem(
-                        cartItem.getProductId(),
-                        cartItem.getProductName(),
-                        sellerIdCache.get(cartItem.getProductId()),
-                        cartItem.getQuantity(),
-                        cartItem.getPrice()))
-                .collect(Collectors.toList());
+        // Convert cart items to order items (using cached seller IDs)
+        List<OrderItem> orderItems = cart.toOrderItems(sellerIdCache);
 
-        // Create order
+        // Create and save order
         Order order = new Order(userId, orderItems, shippingAddressDto);
         Order savedOrder = orderRepository.save(order);
 
-        // Reduce stock for each product
-        for (OrderItem item : orderItems) {
-            reduceStock(item.getProductId(), item.getQuantity());
-        }
+        // Reduce stock for all products (after order is saved)
+        // If this fails, order exists but stock wasn't reduced - consider transaction management
+        reduceStockForItems(orderItems);
 
-        // Clear cart
+        // Clear cart after successful order creation and stock reduction
         clearCart(userId);
 
         return toDto(savedOrder);
     }
 
-    /**
-     * Get all orders for a buyer
-     */
     public List<OrderDto> getOrders(String userId) {
         List<Order> orders = orderRepository.findByUserIdOrderByCreatedAtDesc(userId);
         return orders.stream()
                 .map(this::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    /**
-     * Get order by ID (buyer)
-     */
     public OrderDto getOrderById(String orderId, String userId) {
         Order order = findOrderById(orderId);
-        verifyOrderBelongsToUser(order, userId);
+        if (!order.belongsToUser(userId)) {
+            throw new IllegalArgumentException("Order does not belong to user");
+        }
         return toDto(order);
     }
 
-    /**
-     * Cancel order (only if PENDING or READY_FOR_DELIVERY)
-     * Restores stock for each product
-     */
     public OrderDto cancelOrder(String orderId, String userId) {
         Order order = findOrderById(orderId);
-        verifyOrderBelongsToUser(order, userId);
-
-        // Check if order can be cancelled
-        if (!order.canBeCancelled()) {
-            throw new IllegalStateException(
-                    "Order cannot be cancelled. Current status: " + order.getStatus());
+        if (!order.belongsToUser(userId)) {
+            throw new IllegalArgumentException("Order does not belong to user");
         }
 
-        // Restore stock for each product
-        for (OrderItem item : order.getItems()) {
-            restoreStock(item.getProductId(), item.getQuantity());
-        }
+        // Restore stock for all products
+        restoreStockForItems(order.getItems());
 
-        order.setStatus(OrderStatus.CANCELLED);
-        order.setUpdatedAt(LocalDateTime.now());
+        // Use Order's cancel() method which handles status and timestamp
+        order.cancel();
         Order savedOrder = orderRepository.save(order);
 
         return toDto(savedOrder);
     }
 
-    /**
-     * Delete order (only if CANCELLED or DELIVERED)
-     */
     public void deleteOrder(String orderId, String userId) {
         Order order = findOrderById(orderId);
-        verifyOrderBelongsToUser(order, userId);
+        if (!order.belongsToUser(userId)) {
+            throw new IllegalArgumentException("Order does not belong to user");
+        }
 
         // Check if order can be deleted
         if (!order.canBeDeleted()) {
@@ -166,12 +217,11 @@ public class OrderService {
         orderRepository.delete(order);
     }
 
-    /**
-     * Redo order (create new order from cancelled order)
-     */
     public OrderDto redoOrder(String orderId, String userId) {
         Order originalOrder = findOrderById(orderId);
-        verifyOrderBelongsToUser(originalOrder, userId);
+        if (!originalOrder.belongsToUser(userId)) {
+            throw new IllegalArgumentException("Order does not belong to user");
+        }
 
         // Create new order with same items and shipping address
         Order newOrder = new Order(
@@ -181,116 +231,86 @@ public class OrderService {
 
         // Validate stock availability
         for (OrderItem item : newOrder.getItems()) {
-            ProductDto product = getProductById(item.getProductId());
-            if (product == null) {
-                throw new ResourceNotFoundException("Product not found: " + item.getProductId());
-            }
-            if (product.getStock() == null || product.getStock() < item.getQuantity()) {
-                throw new IllegalArgumentException(
-                        "Insufficient stock for product: " + product.getName() +
-                                ". Available: " + (product.getStock() != null ? product.getStock() : 0) +
-                                ", Requested: " + item.getQuantity());
-            }
+            ProductDto product = getProductByIdOrThrow(item.getProductId());
+            validateStockAvailability(product, item.getQuantity());
         }
 
         Order savedOrder = orderRepository.save(newOrder);
 
-        // Reduce stock
-        for (OrderItem item : savedOrder.getItems()) {
-            reduceStock(item.getProductId(), item.getQuantity());
-        }
+        // Reduce stock for all products
+        reduceStockForItems(savedOrder.getItems());
 
         return toDto(savedOrder);
     }
 
-    /**
-     * Search orders for buyer
-     */
     public List<OrderDto> searchOrders(String userId, String query, OrderStatus status,
             LocalDateTime dateFrom, LocalDateTime dateTo) {
         List<Order> orders;
 
+        // Optimize database query: use status filter if no date range and status is provided
         if (dateFrom != null && dateTo != null) {
             orders = orderRepository.findByUserIdAndCreatedAtBetweenOrderByCreatedAtDesc(
                     userId, dateFrom, dateTo);
+        } else if (status != null) {
+            // Use repository method to filter by status at database level
+            orders = orderRepository.findByUserIdAndStatusOrderByCreatedAtDesc(userId, status);
         } else {
             orders = orderRepository.findByUserIdOrderByCreatedAtDesc(userId);
         }
 
-        // Filter by status if provided
-        if (status != null) {
+        // Filter by status if not already filtered at DB level (when date range was used)
+        if (status != null && dateFrom != null && dateTo != null) {
             orders = orders.stream()
                     .filter(order -> order.getStatus() == status)
-                    .collect(Collectors.toList());
+                    .toList();
+        }
+
+        // Early return if no query filter
+        if (query == null || query.trim().isEmpty()) {
+            return orders.stream()
+                    .map(this::toDto)
+                    .toList();
         }
 
         // Filter by query (order ID or product name)
-        if (query != null && !query.trim().isEmpty()) {
-            String lowerQuery = query.toLowerCase();
-            orders = orders.stream()
-                    .filter(order -> {
-                        // Match order ID
-                        if (order.getId() != null && order.getId().toLowerCase().contains(lowerQuery)) {
-                            return true;
-                        }
-                        // Match product names
-                        return order.getItems().stream()
-                                .anyMatch(item -> item.getProductName().toLowerCase().contains(lowerQuery));
-                    })
-                    .collect(Collectors.toList());
-        }
-
+        String lowerQuery = query.toLowerCase();
         return orders.stream()
+                .filter(order -> order.matchesQuery(lowerQuery))
                 .map(this::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    /**
-     * Get all orders for a seller (orders containing seller's products)
-     */
     public List<OrderDto> getSellerOrders(String sellerEmail) {
         String sellerId = getSellerIdByEmail(sellerEmail);
         List<Order> orders = orderRepository.findByItemsSellerIdOrderByCreatedAtDesc(sellerId);
         return orders.stream()
                 .map(order -> toSellerOrderDto(order, sellerId))
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    /**
-     * Get seller order by ID (only seller's items)
-     */
     public OrderDto getSellerOrderById(String orderId, String sellerEmail) {
         String sellerId = getSellerIdByEmail(sellerEmail);
         Order order = findOrderById(orderId);
-        verifyOrderContainsSellerItems(order, sellerId);
+        if (!order.containsSellerItems(sellerId)) {
+            throw new IllegalArgumentException("Order does not contain seller's products");
+        }
         return toSellerOrderDto(order, sellerId);
     }
 
-    /**
-     * Update order status (seller only)
-     */
     public OrderDto updateOrderStatus(String orderId, OrderStatus newStatus, String sellerEmail) {
         String sellerId = getSellerIdByEmail(sellerEmail);
         Order order = findOrderById(orderId);
-        verifyOrderContainsSellerItems(order, sellerId);
-
-        // Validate status transition
-        OrderStatus currentStatus = order.getStatus();
-        if (!isValidStatusTransition(currentStatus, newStatus)) {
-            throw new IllegalStateException(
-                    "Invalid status transition from " + currentStatus + " to " + newStatus);
+        if (!order.containsSellerItems(sellerId)) {
+            throw new IllegalArgumentException("Order does not contain seller's products");
         }
 
-        order.setStatus(newStatus);
-        order.setUpdatedAt(LocalDateTime.now());
+        // Use Order's updateStatus() method which validates transition and updates timestamp
+        order.updateStatus(newStatus);
         Order savedOrder = orderRepository.save(order);
 
         return toSellerOrderDto(savedOrder, sellerId);
     }
 
-    /**
-     * Search orders for seller
-     */
     public List<OrderDto> searchSellerOrders(String sellerEmail, String query, OrderStatus status,
             LocalDateTime dateFrom, LocalDateTime dateTo) {
         String sellerId = getSellerIdByEmail(sellerEmail);
@@ -304,76 +324,34 @@ public class OrderService {
             orders = orderRepository.findByItemsSellerIdOrderByCreatedAtDesc(sellerId);
         }
 
-        // Filter by seller's items, status, and query in one pass
-        String lowerQuery = (query != null && !query.trim().isEmpty()) ? query.toLowerCase() : null;
-        final String finalSellerId = sellerId;
-        final OrderStatus finalStatus = status;
-
+        // Filter by seller's items first
         orders = orders.stream()
-                .filter(order -> {
-                    // Filter by seller's items
-                    boolean hasSellerItems = order.getItems().stream()
-                            .anyMatch(item -> item.getSellerId().equals(finalSellerId));
-                    if (!hasSellerItems) {
-                        return false;
-                    }
+                .filter(order -> order.containsSellerItems(sellerId))
+                .toList();
 
-                    // Filter by status if provided
-                    if (finalStatus != null && order.getStatus() != finalStatus) {
-                        return false;
-                    }
+        // Filter by status if provided
+        if (status != null) {
+            orders = orders.stream()
+                    .filter(order -> order.getStatus() == status)
+                    .toList();
+        }
 
-                    // Filter by query if provided
-                    if (lowerQuery != null) {
-                        // Match order ID
-                        if (order.getId() != null && order.getId().toLowerCase().contains(lowerQuery)) {
-                            return true;
-                        }
-                        // Match product names (seller's products only)
-                        return order.getItems().stream()
-                                .filter(item -> item.getSellerId().equals(finalSellerId))
-                                .anyMatch(item -> item.getProductName().toLowerCase().contains(lowerQuery));
-                    }
+        // Early return if no query filter
+        if (query == null || query.trim().isEmpty()) {
+            return orders.stream()
+                    .map(order -> toSellerOrderDto(order, sellerId))
+                    .toList();
+        }
 
-                    return true;
-                })
-                .collect(Collectors.toList());
-
+        // Filter by query (order ID or seller's product names)
+        String lowerQuery = query.toLowerCase();
         return orders.stream()
+                .filter(order -> order.matchesSellerQuery(sellerId, lowerQuery))
                 .map(order -> toSellerOrderDto(order, sellerId))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     // Helper methods for inter-service communication
-
-    private CartDto getCart(String userId) {
-        try {
-            return webClientBuilder.build()
-                    .get()
-                    .uri("http://" + CART_SERVICE + "/api/cart")
-                    .header("X-User-Email", userId)
-                    .retrieve()
-                    .bodyToMono(CartDto.class)
-                    .block();
-        } catch (Exception e) {
-            throw new ResourceNotFoundException("Cart not found for user: " + userId);
-        }
-    }
-
-    private void clearCart(String userId) {
-        try {
-            webClientBuilder.build()
-                    .delete()
-                    .uri("http://" + CART_SERVICE + "/api/cart")
-                    .header("X-User-Email", userId)
-                    .retrieve()
-                    .bodyToMono(Void.class)
-                    .block();
-        } catch (Exception e) {
-            // Log but don't fail order creation if cart clearing fails
-            System.err.println("Failed to clear cart for user: " + userId);
-        }
-    }
 
     private ProductDto getProductById(String productId) {
         try {
@@ -388,31 +366,55 @@ public class OrderService {
         }
     }
 
-    private void reduceStock(String productId, Integer quantity) {
-        try {
-            webClientBuilder.build()
-                    .post()
-                    .uri(PRODUCT_SERVICE_URL + "/api/products/{id}/reduce-stock?quantity={quantity}",
-                            productId, quantity)
-                    .retrieve()
-                    .bodyToMono(Void.class)
-                    .block();
-        } catch (Exception e) {
-            throw new RuntimeException("Failed to reduce stock for product: " + productId, e);
+    private ProductDto getProductByIdOrThrow(String productId) {
+        ProductDto product = getProductById(productId);
+        if (product == null) {
+            throw new ResourceNotFoundException("Product not found with id: " + productId);
+        }
+        return product;
+    }
+
+    private void validateStockAvailability(ProductDto product, Integer requestedQuantity) {
+        if (product.getStock() == null || product.getStock() < requestedQuantity) {
+            throw new IllegalArgumentException(
+                    "Insufficient stock for product: " + product.getName() +
+                            ". Available: " + (product.getStock() != null ? product.getStock() : 0) +
+                            ", Requested: " + requestedQuantity);
         }
     }
 
+    private Cart getOrCreateCart(String userId) {
+        return cartRepository.findByUserId(userId)
+                .orElseGet(() -> cartRepository.save(new Cart(userId)));
+    }
+
+    private void reduceStock(String productId, Integer quantity) {
+        callStockEndpoint(productId, quantity, "reduce-stock", "reduce");
+    }
+
     private void restoreStock(String productId, Integer quantity) {
+        callStockEndpoint(productId, quantity, "restore-stock", "restore");
+    }
+
+    private void reduceStockForItems(List<OrderItem> items) {
+        items.forEach(item -> reduceStock(item.getProductId(), item.getQuantity()));
+    }
+
+    private void restoreStockForItems(List<OrderItem> items) {
+        items.forEach(item -> restoreStock(item.getProductId(), item.getQuantity()));
+    }
+
+    private void callStockEndpoint(String productId, Integer quantity, String endpoint, String action) {
         try {
             webClientBuilder.build()
                     .post()
-                    .uri(PRODUCT_SERVICE_URL + "/api/products/{id}/restore-stock?quantity={quantity}",
+                    .uri(PRODUCT_SERVICE_URL + "/api/products/{id}/" + endpoint + "?quantity={quantity}",
                             productId, quantity)
                     .retrieve()
                     .bodyToMono(Void.class)
                     .block();
         } catch (Exception e) {
-            throw new RuntimeException("Failed to restore stock for product: " + productId, e);
+            throw new RuntimeException("Failed to " + action + " stock for product: " + productId, e);
         }
     }
 
@@ -436,20 +438,6 @@ public class OrderService {
                 .orElseThrow(() -> new ResourceNotFoundException(ORDER_NOT_FOUND_MESSAGE + orderId));
     }
 
-    private void verifyOrderBelongsToUser(Order order, String userId) {
-        if (!order.getUserId().equals(userId)) {
-            throw new IllegalArgumentException("Order does not belong to user");
-        }
-    }
-
-    private void verifyOrderContainsSellerItems(Order order, String sellerId) {
-        boolean hasSellerItems = order.getItems().stream()
-                .anyMatch(item -> item.getSellerId().equals(sellerId));
-        if (!hasSellerItems) {
-            throw new IllegalArgumentException("Order does not contain seller's products");
-        }
-    }
-
     private String getSellerIdByEmail(String email) {
         try {
             com.buyapp.common.dto.UserDto user = webClientBuilder.build()
@@ -470,6 +458,35 @@ public class OrderService {
     }
 
     // Conversion methods
+    private CartDto toCartDto(Cart cart, boolean validateAvailability) {
+        CartDto dto = new CartDto();
+        dto.setId(cart.getId());
+        dto.setUserId(cart.getUserId());
+        dto.setCreatedAt(cart.getCreatedAt());
+        dto.setUpdatedAt(cart.getUpdatedAt());
+
+        List<CartItemDto> itemDtos = cart.getItems().stream()
+                .map(item -> {
+                    Boolean available = null;
+                    // Validate availability if requested
+                    if (validateAvailability) {
+                        ProductDto product = getProductById(item.getProductId());
+                        available = product != null && product.getStock() != null
+                                && product.getStock() >= item.getQuantity();
+                    }
+                    return new CartItemDto(
+                            item.getProductId(),
+                            item.getProductName(),
+                            item.getQuantity(),
+                            item.getPrice(),
+                            available);
+                })
+                .toList();
+
+        dto.setItems(itemDtos);
+        dto.setTotal(cart.getTotal()); // Use Cart's getTotal() method
+        return dto;
+    }
 
     private OrderDto toDto(Order order) {
         OrderDto dto = new OrderDto();
@@ -491,7 +508,7 @@ public class OrderService {
                         item.getSellerId(),
                         item.getQuantity(),
                         item.getPrice()))
-                .collect(Collectors.toList());
+                .toList();
 
         dto.setItems(itemDtos);
         return dto;
@@ -503,7 +520,7 @@ public class OrderService {
         // Filter items to only include seller's products
         List<OrderItemDto> sellerItems = dto.getItems().stream()
                 .filter(item -> item.getSellerId().equals(sellerId))
-                .collect(Collectors.toList());
+                .toList();
 
         // Recalculate total for seller's items only
         Double sellerTotal = sellerItems.stream()
@@ -515,13 +532,4 @@ public class OrderService {
         return dto;
     }
 
-    private boolean isValidStatusTransition(OrderStatus current, OrderStatus next) {
-        // Define valid status transitions
-        return switch (current) {
-            case PENDING -> next == OrderStatus.READY_FOR_DELIVERY || next == OrderStatus.CANCELLED;
-            case READY_FOR_DELIVERY -> next == OrderStatus.SHIPPED || next == OrderStatus.CANCELLED;
-            case SHIPPED -> next == OrderStatus.DELIVERED;
-            case DELIVERED, CANCELLED -> false; // Terminal states
-        };
-    }
 }
